special-pages/pages/new-tab/app/favorites/components/Tile.module.css
.item {
    display: block;
    position: relative;
    text-decoration: none;
    color: currentColor;
    outline: none;
    padding-left: var(--sp-3);
    padding-right: var(--sp-3);

    &:focus-visible .icon {
        box-shadow: var(--focus-ring);
    }

    &[data-dropped="true"] {
        animation-name: pulse;
        animation-duration: 500ms;
        animation-fill-mode: forwards;
        animation-timing-function: ease-in-out;
    }
}

@keyframes pulse {
    0% { scale: 1 }
    50% { scale: 1.2 }
    100% { scale: 1 }
}

.icon {
    display: grid;
    align-content: center;
    justify-items: center;
    width: 4rem;
    height: 4rem;
    margin-bottom: 4px;
    border-radius: var(--border-radius-lg);
}

.draggable {
    backdrop-filter: blur(48px);
    background: var(--ntp-surface-background-color);
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12), 0px 0px 3px 0px rgba(0, 0, 0, 0.16);

    &:hover {
        background-color: var(--color-white-at-18);
    }

    [data-theme="dark"] & {
        &:hover {
            background: rgba(0, 0, 0, 0.24);
        }
    }

    [data-background-kind="userImage"] & {
        border: 1px solid var(--color-black-at-9);
        background: var(--color-white-at-30);

        &:hover {
            background: var(--color-white-at-18);
        }
    }

    [data-theme="dark"] [data-background-kind="userImage"] & {
        border: 1px solid var(--color-white-at-9);
        background: var(--color-black-at-18);

        &:hover {
            background: rgba(0, 0, 0, 0.24);
        }
    }

    &:active {
        transform: scale(0.95);
    }
}

.favicon {
    display: block;
    max-height: calc(32 * var(--px-in-rem));
    max-width: calc(32 * var(--px-in-rem));
    background-repeat: no-repeat;
    background-size: contain;
    pointer-events: none;

    &[data-loaded][data-did-try-fallback] {
        border-radius: var(--border-radius-md);
        height: calc(32 * var(--px-in-rem));
        width: calc(32 * var(--px-in-rem));
    }
}

.text {
    text-align: center;
    font-size: calc(10 * var(--px-in-rem));
    line-height: 1.1;
    font-weight: 400;
    overflow: hidden;
    text-overflow: ellipsis;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    display: -webkit-box;
    -webkit-box-orient: vertical;
}

.placeholder {
    background-color: transparent;
    border: 1.5px dashed var(--color-black-at-9);

    [data-theme=dark] & {
        border-color: var(--color-white-at-9);
    }
}

.plus {
    outline: none;
    border: none;
    color: var(--color-black-at-90);

    [data-theme=dark] & {
        color: var(--color-white-at-85);
    }

    &:focus-visible {
        box-shadow: var(--focus-ring);
    }
}

.dropper {
    width: 2px;
    height: 4rem;
    position: absolute;
    top: 0;
    background-color: var(--color-black-at-12);
    [data-theme=dark] & {
        background-color: var(--color-white-at-12);
    }
}

.dropper[data-edge="left"] {
    left: -1px;
}

.dropper[data-edge="right"] {
    right: -1px;
}

[data-item-state="idle"] {
    &:hover {
        border-color: #FFF;
    }
}

[data-item-state="dragging"] {
    opacity: 0.4;
}

